# Camera2GetPreview

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/afei/camera2getpreview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: ImageUtil.h  com_afei_camera2getpreview_util_NativeLibrary.h
app/src/main/cpp/src/: ImageUtil.cpp  com_afei_camera2getpreview_util_NativeLibrary.cpp
app/src/main/java/com/afei/camera2getpreview/: Camera2View.java  CameraFragment.java  MainActivity.java
app/src/main/java/com/afei/camera2getpreview/util/: Camera2Proxy.java  ColorConvertUtil.java  FileUtil.java  NativeLibrary.java  Permission.java  PermissionDialog.java
app/src/main/res/layout/: fragment_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/afei/camera2getpreview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
